# personal-finance-tracker

./: .dockerignore  .gitignore  Dockerfile  compose.yaml  go.mod
cmd/server/: main.go
go-server/: .dockerignore  Dockerfile
go-server/cmd/server/: main.go
go-server/internal/handlers/: handlers.go
go-server/web/templates/: login.html
internal/email/: email.go  email_test.go
internal/index/: handlers.go
python-supabase-api/: .dockerignore  Dockerfile  main.py  pyproject.toml
python-supabase-api/routers/: auth.py  dependencies.py
